Add main activity layout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
 
     <dimen name="notificationIconHeight">18dp</dimen>
     <dimen name="notificationIconWidth">18dp</dimen>
+
+    <dimen name="mainActivityPadding">16dp</dimen>
 </resources>
