--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/mainActivityPadding">
+    android:orientation="vertical">
 
-    <TextView
+    <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello, world!" />
+        android:name="com.nisargjhaveri.netspeed.SettingsFragment"
+        android:id="@+id/settingsFragment" />
 
 </LinearLayout>
