Fix notification color for Android M

--- a/app/src/main/res/layout/indicator_notification_view.xml
+++ b/app/src/main/res/layout/indicator_notification_view.xml
@@ -21,6 +21,8 @@
         android:layout_toStartOf="@id/notificationSettings"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        style="@style/TextAppearance.AppCompat.Notification.Info"
+        android:textSize="14sp"
         android:id="@+id/notificationText" />
 
     <ImageView
