--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -7,7 +7,7 @@
     <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.nisargjhaveri.netspeed.SettingsFragment"
+        android:name="com.nisargjhaveri.netspeed.settings.SettingsFragment"
         android:id="@+id/settingsFragment" />
 
 </LinearLayout>
