--- a/app/src/main/res/layout/fragment_main_indicator.xml
+++ b/app/src/main/res/layout/fragment_main_indicator.xml
@@ -10,17 +10,18 @@
         android:textAlignment="center"
         android:fontFamily="sans-serif-condensed"
         android:textStyle="bold"
-        android:id="@+id/speed_value_text"
+        android:id="@+id/speedValueText"
         android:text="@string/dash"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/speed_value_text"
+        android:layout_below="@id/speedValueText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-32sp"
         android:textSize="60sp"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:id="@+id/speedUnitText"
         android:text="@string/kBps"/>
 </RelativeLayout>
