Improved About page, add links to rate app and feedback

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,29 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/app_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@mipmap/ic_launcher" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="96dp"
+                    android:layout_height="96dp"
+                    android:paddingTop="2dp"
+                    app:srcCompat="@drawable/app_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/app_version"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/version_name" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="by Nisarg Jhaveri" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/separator_height"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="@dimen/separator_horizontal_margin"
+                android:layout_marginEnd="@dimen/separator_horizontal_margin"
+                android:background="@color/separator_color"/>
+
+            <TextView
+                android:id="@+id/rate_app"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/about_link_height"
+                android:gravity="center_vertical"
+                android:paddingStart="@dimen/about_link_padding"
+                android:paddingEnd="@dimen/about_link_padding"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="@dimen/about_link_text_size"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/rate_this_app"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/separator_height"
+                android:layout_marginStart="@dimen/separator_horizontal_margin"
+                android:layout_marginEnd="@dimen/separator_horizontal_margin"
+                android:background="@color/separator_color"/>
+
+            <TextView
+                android:id="@+id/send_feedback"
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/about_link_height"
+                android:gravity="center_vertical"
+                android:paddingStart="@dimen/about_link_padding"
+                android:paddingEnd="@dimen/about_link_padding"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="@dimen/about_link_text_size"
+                android:background="?android:attr/selectableItemBackground"
+                android:text="@string/send_feedback"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="@dimen/separator_height"
+                android:layout_marginStart="@dimen/separator_horizontal_margin"
+                android:layout_marginEnd="@dimen/separator_horizontal_margin"
+                android:background="@color/separator_color"/>
+
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
-        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/app_icon" />
-
-    <TextView
-        android:id="@+id/app_version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/version_name"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/app_name" />
-</RelativeLayout>
+        android:paddingBottom="5dp"
+        android:text="@string/made_with_love_in_india" />
+</LinearLayout>
