--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,5 +3,5 @@
     <item android:id="@+id/about"
         android:title="@string/about" />
     <item android:id="@+id/rate_app"
-        android:title="@string/rate_app" />
+        android:title="@string/rate_this_app" />
 </menu>
