Don't use notification icon in notification, set white icon

--- a/app/src/main/res/layout/view_indicator_notification.xml
+++ b/app/src/main/res/layout/view_indicator_notification.xml
@@ -1,39 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="18dp"
         android:layout_height="18dp"
-        android:layout_centerVertical="true"
-        android:alpha="0.7"
-        android:contentDescription="@string/notif_notification_icon"
-        android:id="@+id/notificationIcon" />
+        android:alpha="0.9">
+        <TextView
+            android:id="@+id/notificationSpeedValue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="-3dp"
+            android:textAlignment="center"
+            android:textSize="12dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-condensed" />
+
+        <TextView
+            android:id="@+id/notificationSpeedUnit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="-2dp"
+            android:textAlignment="center"
+            android:textSize="7dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/notificationText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/notificationIcon"
-        android:layout_toStartOf="@id/notificationSettings"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         style="@style/TextAppearance.AppCompat.Notification.Info"
         android:textSize="14sp"
-        android:id="@+id/notificationText" />
+        android:layout_weight="1" />
 
     <ImageView
+        android:id="@+id/notificationSettings"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:scaleType="centerInside"
         android:src="@drawable/ic_settings_black_24dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
         android:alpha="0.5"
         android:visibility="gone"
-        android:contentDescription="@string/notif_settings_button"
-        android:id="@+id/notificationSettings" />
+        android:contentDescription="@string/notif_settings_button" />
 
-</RelativeLayout>
+</LinearLayout>
